# yt-dlp-gui

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ParamData.h  main.cpp  readme.md
